Avoiding Base64 class deprecation message